force-app/main/default/objects/InsurancePolicy/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <description>Policy Administrator</description>
    <label>Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>