force-app/main/default/objects/InsurancePolicy/fields/Agreement_Key__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Key__c</fullName>
    <description>External Policy Number</description>
    <externalId>true</externalId>
    <label>Agreement Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>