force-app/main/default/objects/InsurancePolicy/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <description>External identifier for Policy that is durable and is known to the Policy Administration systems.</description>
    <externalId>true</externalId>
    <label>Agreement Number</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>