force-app/main/default/objects/InsurancePolicy/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>Line of Business associated to the policy</description>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annuity</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>