force-app/main/default/objects/InsurancePolicy/fields/PolicyExtId__c.field-meta.xml
<CustomField>
    <fullName>PolicyExtId__c</fullName>
    <description>External identifier for Policy that is durable and is known to the Policy Administration systems.</description>
    <label>Policy Ext Id</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>