force-app/main/default/objects/InsurancePolicy/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product Description (Denormalized field)</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>