force-app/main/default/objects/InsurancePolicy/recordTypes/Annuity.recordType-meta.xml
<RecordType>
    <fullName>Annuity</fullName>
    <active>true</active>
    <description>Annuity Product</description>
    <label>Annuity</label>
</RecordType>