force-app/main/default/objects/InsurancePolicy/recordTypes/Disability.recordType-meta.xml
<RecordType>
    <fullName>Disability</fullName>
    <active>true</active>
    <description>Disability</description>
    <label>Disability</label>
</RecordType>