force-app/main/default/objects/InsurancePolicy/recordTypes/Life.recordType-meta.xml
<RecordType>
    <fullName>Life</fullName>
    <active>true</active>
    <description>Life Insurance Record Type</description>
    <label>Life</label>
</RecordType>